Rust: pin toolchain, use tabs, ignore /dev

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /target
+/dev
 # Created by https://www.toptal.com/developers/gitignore/api/macOS,Windows,Rust,VisualStudioCode,Vim
 # Edit at https://www.toptal.com/developers/gitignore?templates=macOS,Windows,Rust,VisualStudioCode,Vim
 
