--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /target
 /dev
+/.idea
 # Created by https://www.toptal.com/developers/gitignore/api/macOS,Windows,Rust,VisualStudioCode,Vim
 # Edit at https://www.toptal.com/developers/gitignore?templates=macOS,Windows,Rust,VisualStudioCode,Vim
 
@@ -10,7 +11,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
